--- a/.github/workflows/.ci.yml
+++ b/.github/workflows/.ci.yml
@@ -4,7 +4,7 @@ on: push
 
 jobs:
   ci:
-    runs-on: unbuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
