--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: ci;
+name: ci
 
 on: push
 
@@ -9,9 +9,9 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          aws-region: us-east-2
-          role-to-assume: arn:aws:iam::123456789100:role/my-github-actions-role
-          role-session-name: MySessionName
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-west-1
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
